trying to correct footer text to center on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -153,6 +153,7 @@ footer {
   margin-bottom: -8px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
+  text-align: center;
 }
 
  /* ====================================================================================================================
